src/gateway-service/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30002
      protocol: TCP
